--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,15 +65,16 @@
   font-style: italic;
 }
 :root {
-  --color-text: #f1dadd;
+  --color-text: #FFF;
   --color-primary: #00FFAF;
   --color-button-background: #FFF;
+  --color-border: #202020;
 }
 
 body {
   margin: 0;
   color: var(--color-text);
-  font-family: "Roboto", sans-serif;
+  font-family: "Inter", sans-serif;
   background-color: #000;
   font-size: clamp(18px, 0.5vw + 1rem, 24px);
 }
@@ -110,17 +111,29 @@ html {
 
 .button {
   display: inline-block;
-  border: 1px solid var(--color-text);
-  padding: 1rem;
-  font-size: 1rem;
+  padding: 0.75rem;
+  font-size: 12px;
   border-radius: 5px;
-  letter-spacing: 1px;
   text-decoration: none;
-  color: var(--color-text);
+  color: #000000;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  outline-offset: 0.25rem;
 }
-.button:hover {
-  color: var(--color-primary);
-  border-color: var(--color-primary);
+.button--primary {
+  background-color: var(--color-primary);
+  outline: 1px solid var(--color-primary);
+}
+.button--secondary {
+  background-color: #FFF;
+  outline: 1px solid #FFF;
+}
+@media only screen and (min-width: 720px) {
+  .button {
+    font-size: 14px;
+    padding: 1rem 1.5rem;
+  }
 }
 
 /* Sections */
@@ -161,7 +174,7 @@ section {
   position: relative;
   display: flex;
   align-items: center;
-  height: 75vh;
+  height: 70vh;
 }
 
 .hero__content {
@@ -184,7 +197,7 @@ section {
 
 .hero__text {
   font-family: "honest";
-  margin: 0;
+  margin: 0 0 1.25rem;
 }
 
 /* Richtext */
@@ -199,11 +212,10 @@ section {
   color: var(--color-primary);
 }
 
-/* Divider */
 .divider {
   width: 1px;
   height: 50px;
-  background: #2b2b2b;
+  background: var(--color-border);
   opacity: 1;
   overflow: hidden;
   position: relative;
@@ -235,14 +247,26 @@ section {
 .footer {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 1.5rem;
   max-width: 1600px;
   margin: 0 auto;
-  padding: 5rem;
   box-sizing: border-box;
   text-align: center;
-  border-top: 1px solid #151515;
+}
+
+.footer__promotion {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding: 5rem;
+  border: 1px solid var(--color-border);
+  border-radius: 5px;
+}
+@media only screen and (min-width: 720px) {
+  .footer__promotion {
+    padding: 10rem 5rem;
+  }
 }
 
 .footer__text {
@@ -258,7 +282,7 @@ section {
 
 .footer__link {
   font-family: "honest";
-  font-weight: bold;
+  font-weight: 900;
   text-decoration: none;
   color: var(--color-primary);
 }
@@ -266,6 +290,24 @@ section {
   .footer__link {
     font-size: 3rem;
   }
+}
+
+.footer__meta {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+@media only screen and (min-width: 720px) {
+  .footer__meta {
+    flex-direction: row;
+  }
+}
+
+.footer__meta-item {
+  color: #575757;
+  font-size: 1rem;
 }
 
 /* Articles */
@@ -278,7 +320,7 @@ article {
   gap: 1rem;
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
-  border-bottom: 1px solid #151515;
+  border-bottom: 1px solid var(--color-border);
 }
 article:last-child {
   border: 0;
@@ -313,6 +355,7 @@ article:last-child {
   margin: 0;
   font-weight: normal;
   color: var(--color-primary);
+  font-family: "Inter", sans-serif;
 }
 
 .article__heading,
@@ -321,8 +364,15 @@ article:last-child {
 }
 
 .article__date {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
   margin: 0;
   text-align: right;
+}
+
+.article__date-item--separator {
+  color: var(--color-primary);
 }
 
 .about {
