--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,33 +5,15 @@
   font-style: normal;
 }
 @font-face {
-  font-family: "million_astteroidsregular";
-  src: url("../assets/fonts/millionastteroids-r9njo-webfont.woff2") format("woff2"), url("../assets/fonts/millionastteroids-r9njo-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
+  font-family: "honest";
+  src: url("../assets/fonts/honest-lightitalic-webfont.woff2") format("woff2"), url("../assets/fonts/honest-lightitalic-webfont.woff") format("woff");
+  font-weight: 300;
+  font-style: italic;
 }
 @font-face {
   font-family: "honest";
   src: url("../assets/fonts/honest-regular-webfont.woff2") format("woff2"), url("../assets/fonts/honest-regular-webfont.woff") format("woff");
   font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "honest";
-  src: url("../assets/fonts/honest-medium-webfont.woff2") format("woff2"), url("../assets/fonts/honest-medium-webfont.woff") format("woff");
-  font-weight: 500;
-  font-style: normal;
-}
-@font-face {
-  font-family: "honest";
-  src: url("../assets/fonts/honest-bold-webfont.woff2") format("woff2"), url("../assets/fonts/honest-bold-webfont.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-}
-@font-face {
-  font-family: "honest";
-  src: url("../assets/fonts/honest-black-webfont.woff2") format("woff2"), url("../assets/fonts/honest-black-webfont.woff") format("woff");
-  font-weight: 900;
   font-style: normal;
 }
 @font-face {
@@ -42,9 +24,21 @@
 }
 @font-face {
   font-family: "honest";
-  src: url("../assets/fonts/honest-blackitalic-webfont.woff2") format("woff2"), url("../assets/fonts/honest-blackitalic-webfont.woff") format("woff");
-  font-weight: 900;
+  src: url("../assets/fonts/honest-medium-webfont.woff2") format("woff2"), url("../assets/fonts/honest-medium-webfont.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "honest";
+  src: url("../assets/fonts/honest-mediumitalic-webfont.woff2") format("woff2"), url("../assets/fonts/honest-mediumitalic-webfont.woff") format("woff");
+  font-weight: 500;
   font-style: italic;
+}
+@font-face {
+  font-family: "honest";
+  src: url("../assets/fonts/honest-bold-webfont.woff2") format("woff2"), url("../assets/fonts/honest-bold-webfont.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
 }
 @font-face {
   font-family: "honest";
@@ -54,14 +48,14 @@
 }
 @font-face {
   font-family: "honest";
-  src: url("../assets/fonts/honest-lightitalic-webfont.woff2") format("woff2"), url("../assets/fonts/honest-lightitalic-webfont.woff") format("woff");
-  font-weight: 300;
-  font-style: italic;
+  src: url("../assets/fonts/honest-black-webfont.woff2") format("woff2"), url("../assets/fonts/honest-black-webfont.woff") format("woff");
+  font-weight: 900;
+  font-style: normal;
 }
 @font-face {
   font-family: "honest";
-  src: url("../assets/fonts/honest-mediumitalic-webfont.woff2") format("woff2"), url("../assets/fonts/honest-mediumitalic-webfont.woff") format("woff");
-  font-weight: 500;
+  src: url("../assets/fonts/honest-blackitalic-webfont.woff2") format("woff2"), url("../assets/fonts/honest-blackitalic-webfont.woff") format("woff");
+  font-weight: 900;
   font-style: italic;
 }
 :root {
@@ -123,7 +117,7 @@ html {
 }
 .button--primary {
   background-color: var(--color-primary);
-  outline: 1px solid var(--color-primary);
+  outline: 2px solid var(--color-primary);
 }
 .button--secondary {
   background-color: #FFF;
@@ -136,7 +130,6 @@ html {
   }
 }
 
-/* Sections */
 section {
   overflow: hidden;
 }
@@ -169,7 +162,6 @@ section {
   font-size: clamp(18px, 0.5vw + 1rem, 24px);
 }
 
-/* Hero */
 .hero {
   position: relative;
   display: flex;
@@ -200,7 +192,6 @@ section {
   margin: 0 0 1.25rem;
 }
 
-/* Richtext */
 .section--richtext__text {
   font-family: "honest";
   font-weight: bold;
@@ -243,7 +234,6 @@ section {
     transform: translateY(100%);
   }
 }
-/* Footer */
 .footer {
   display: flex;
   flex-direction: column;
@@ -310,7 +300,6 @@ section {
   font-size: 1rem;
 }
 
-/* Articles */
 article {
   display: flex;
   flex-wrap: wrap;
@@ -375,21 +364,84 @@ article:last-child {
   color: var(--color-primary);
 }
 
-.about {
-  display: flex;
-  gap: 5rem;
-  align-items: center;
-}
-
-.columns {
-  display: grid;
-  gap: 2rem;
-  grid-template-columns: 1fr 1fr;
-}
-
 img {
-  flex: 1;
-  width: 50%;
+  width: 100%;
+  height: auto;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  background: rgb(21, 21, 21);
+  background: linear-gradient(180deg, rgb(21, 21, 21) 0%, rgba(21, 21, 21, 0) 100%);
+}
+
+.header__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-right: 2.5rem;
+  padding-left: 2.5rem;
+}
+
+.header__brand {
+  display: block;
+  max-width: 45px;
+  line-height: 0;
+}
+
+.header__actions {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  list-style-type: none;
+}
+@media only screen and (min-width: 720px) {
+  .header__actions {
+    display: none;
+  }
+}
+
+.header__brand-image {
+  border-radius: 50%;
+  max-width: 75px;
+  background-color: var(--color-primary);
+}
+
+.header__menu {
+  display: none;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+@media only screen and (min-width: 720px) {
+  .header__menu {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+  }
+}
+
+.header__link {
+  color: #FFF;
+  font-size: 18px;
+}
+.header__link:hover {
+  color: var(--color-primary);
+}
+
+button {
+  background: transparent;
+  padding: 0;
+  border: none;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=styles.css.map */
