--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,11 +7,11 @@
 }
 
 @font-face {
-  font-family: 'million_astteroidsregular';
-  src: url('../assets/fonts/millionastteroids-r9njo-webfont.woff2') format('woff2'),
-       url('../assets/fonts/millionastteroids-r9njo-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
+  font-family: "honest";
+  src: url("../assets/fonts/honest-lightitalic-webfont.woff2") format("woff2"),
+       url("../assets/fonts/honest-lightitalic-webfont.woff") format("woff");
+  font-weight: 300;
+  font-style: italic;
 }
 
 @font-face {
@@ -19,30 +19,6 @@
   src: url("../assets/fonts/honest-regular-webfont.woff2") format("woff2"),
        url("../assets/fonts/honest-regular-webfont.woff") format("woff");
   font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "honest";
-  src: url("../assets/fonts/honest-medium-webfont.woff2") format("woff2"),
-       url("../assets/fonts/honest-medium-webfont.woff") format("woff");
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "honest";
-  src: url("../assets/fonts/honest-bold-webfont.woff2") format("woff2"),
-       url("../assets/fonts/honest-bold-webfont.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "honest";
-  src: url("../assets/fonts/honest-black-webfont.woff2") format("woff2"),
-       url("../assets/fonts/honest-black-webfont.woff") format("woff");
-  font-weight: 900;
   font-style: normal;
 }
 
@@ -56,10 +32,26 @@
 
 @font-face {
   font-family: "honest";
-  src: url("../assets/fonts/honest-blackitalic-webfont.woff2") format("woff2"),
-       url("../assets/fonts/honest-blackitalic-webfont.woff") format("woff");
-  font-weight: 900;
+  src: url("../assets/fonts/honest-medium-webfont.woff2") format("woff2"),
+       url("../assets/fonts/honest-medium-webfont.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "honest";
+  src: url("../assets/fonts/honest-mediumitalic-webfont.woff2") format("woff2"),
+       url("../assets/fonts/honest-mediumitalic-webfont.woff") format("woff");
+  font-weight: 500;
   font-style: italic;
+}
+
+@font-face {
+  font-family: "honest";
+  src: url("../assets/fonts/honest-bold-webfont.woff2") format("woff2"),
+       url("../assets/fonts/honest-bold-webfont.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
 }
 
 @font-face {
@@ -72,17 +64,17 @@
 
 @font-face {
   font-family: "honest";
-  src: url("../assets/fonts/honest-lightitalic-webfont.woff2") format("woff2"),
-       url("../assets/fonts/honest-lightitalic-webfont.woff") format("woff");
-  font-weight: 300;
-  font-style: italic;
+  src: url("../assets/fonts/honest-black-webfont.woff2") format("woff2"),
+       url("../assets/fonts/honest-black-webfont.woff") format("woff");
+  font-weight: 900;
+  font-style: normal;
 }
 
 @font-face {
   font-family: "honest";
-  src: url("../assets/fonts/honest-mediumitalic-webfont.woff2") format("woff2"),
-       url("../assets/fonts/honest-mediumitalic-webfont.woff") format("woff");
-  font-weight: 500;
+  src: url("../assets/fonts/honest-blackitalic-webfont.woff2") format("woff2"),
+       url("../assets/fonts/honest-blackitalic-webfont.woff") format("woff");
+  font-weight: 900;
   font-style: italic;
 }
 
@@ -146,7 +138,10 @@ html {
 
   &--primary {
     background-color: var(--color-primary);
-    outline: 1px solid var(--color-primary);
+    outline: 2px solid var(--color-primary);
+
+    &:hover {
+    }
   }
 
   &--secondary {
@@ -159,8 +154,6 @@ html {
     padding: 1rem 1.5rem;
   }
 }
-
-/* Sections */
 
 section {
   overflow: hidden;
@@ -194,8 +187,6 @@ section {
   font-size: clamp(18px, 0.5vw + 1rem, 24px);
 }
 
-/* Hero */
-
 .hero {
   position: relative;
   display: flex;
@@ -225,8 +216,6 @@ section {
   font-family: "honest";
   margin: 0 0 1.25rem;
 }
-
-/* Richtext */
 
 .section--richtext__text {
   font-family: "honest";
@@ -272,8 +261,6 @@ section {
       transform: translateY(100%);
   }
 }
-
-/* Footer */
 
 .footer {
   display: flex;
@@ -336,8 +323,6 @@ section {
   color: #575757;
   font-size: 1rem;
 }
-
-/* Articles */
 
 article {
   display: flex;
@@ -402,19 +387,81 @@ article {
   color: var(--color-primary);
 }
 
-.about {
-  display: flex;
-  gap: 5rem;
-  align-items: center;
-}
-
-.columns {
-  display: grid;
-  gap: 2rem;
-  grid-template-columns: 1fr 1fr;
-}
-
 img {
-  flex: 1;
-  width: 50%;
+  width: 100%;
+  height: auto;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  background: rgb(21,21,21);
+  background: linear-gradient(180deg, rgba(21,21,21,1) 0%, rgba(21,21,21,0) 100%);
+}
+
+.header__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-right: 2.5rem;
+  padding-left: 2.5rem;
+}
+
+.header__brand {
+  display: block;
+  max-width: 45px;
+  line-height: 0;
+}
+
+.header__actions {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  list-style-type: none;
+
+  @media only screen and (min-width: 720px) {
+    display: none;
+  }
+}
+
+.header__brand-image {
+  border-radius: 50%;
+  max-width: 75px;
+  background-color: var(--color-primary);
+}
+
+.header__menu {
+  display: none;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+
+  @media only screen and (min-width: 720px) {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+  }
+}
+
+.header__link {
+  color: #FFF;
+  font-size: 18px;
+
+  &:hover {
+    color: var(--color-primary);
+  }
+}
+
+button {
+  background: transparent;
+  padding: 0;
+  border: none;
+  cursor: pointer;
 }
