--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,7 +105,7 @@ html {
 
 .button {
   display: inline-block;
-  padding: 0.75rem;
+  padding: 1rem;
   font-size: 12px;
   border-radius: 5px;
   text-decoration: none;
@@ -113,21 +113,25 @@ html {
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 1px;
-  outline-offset: 0.25rem;
 }
 .button--primary {
   background-color: var(--color-primary);
-  outline: 2px solid var(--color-primary);
 }
 .button--secondary {
   background-color: #FFF;
-  outline: 1px solid #FFF;
 }
 @media only screen and (min-width: 720px) {
   .button {
+    padding: 1.25rem 1.5rem;
     font-size: 14px;
-    padding: 1rem 1.5rem;
   }
+}
+
+button {
+  background: transparent;
+  padding: 0;
+  border: none;
+  cursor: pointer;
 }
 
 section {
@@ -235,41 +239,32 @@ section {
   }
 }
 .footer {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  max-width: 1600px;
-  margin: 0 auto;
-  box-sizing: border-box;
   text-align: center;
 }
-
-.footer__promotion {
+.footer__content {
   display: flex;
   align-items: center;
   flex-direction: column;
   gap: 1.5rem;
-  padding: 5rem;
+  padding: 5rem 2.5rem;
   border: 1px solid var(--color-border);
   border-radius: 5px;
+  margin-bottom: 1.5rem;
 }
 @media only screen and (min-width: 720px) {
-  .footer__promotion {
-    padding: 10rem 5rem;
+  .footer__content {
+    padding: 8rem 2.5rem;
   }
 }
-
 .footer__text {
   margin: 0;
   letter-spacing: 1px;
-  line-height: 1;
 }
 @media only screen and (min-width: 720px) {
   .footer__text {
     font-size: 2.25rem;
   }
 }
-
 .footer__link {
   font-family: "honest";
   font-weight: 900;
@@ -281,7 +276,6 @@ section {
     font-size: 3rem;
   }
 }
-
 .footer__meta {
   display: flex;
   flex-direction: column;
@@ -294,10 +288,17 @@ section {
     flex-direction: row;
   }
 }
-
 .footer__meta-item {
   color: #575757;
   font-size: 1rem;
+}
+.footer__meta-item:last-child {
+  display: none;
+}
+@media only screen and (min-width: 720px) {
+  .footer__meta-item:last-child {
+    display: block;
+  }
 }
 
 article {
@@ -383,15 +384,11 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding-right: 2.5rem;
-  padding-left: 2.5rem;
 }
 
 .header__brand {
   display: block;
-  max-width: 45px;
+  max-width: 40px;
   line-height: 0;
 }
 
@@ -437,11 +434,14 @@ header {
   color: var(--color-primary);
 }
 
-button {
-  background: transparent;
-  padding: 0;
-  border: none;
-  cursor: pointer;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-right: 1.25rem;
+  padding-left: 1.25rem;
+}
+.container--wide {
+  max-width: 1600px;
 }
 
 /*# sourceMappingURL=styles.css.map */
