--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -395,45 +395,44 @@ img {
   height: auto;
 }
 
-header {
+.header {
   position: sticky;
   top: 0;
   z-index: 2;
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   background: rgb(21,21,21);
-  background: linear-gradient(180deg, rgba(21,21,21,1) 0%, rgba(21,21,21,0) 100%);
-}
+  background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgba(21,21,21,0) 100%);
 
-.header__wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.header__brand {
-  display: block;
-  max-width: 40px;
-  line-height: 0;
-}
-
-.header__actions {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  list-style-type: none;
-
-  @media only screen and (min-width: 720px) {
-    display: none;
+  &__brand {
+    display: block;
+    max-width: 40px;
+    line-height: 0;
   }
-}
 
-.header__brand-image {
-  border-radius: 50%;
-  max-width: 75px;
-  background-color: var(--color-primary);
+  &__brand-image {
+    border-radius: 50%;
+    background-color: var(--color-primary);
+  }
+
+  &__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__actions {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    list-style-type: none;
+  
+    @media only screen and (min-width: 720px) {
+      display: none;
+    }
+  }
 }
 
 .header__menu {
