--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -472,3 +472,54 @@ img {
     max-width: 1600px;
   }
 }
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+
+  &__field {
+    position: relative;
+  }
+
+  &__input {
+    width: 100%;
+    outline: none;
+    padding: 0.85rem;
+    border-radius: 5px;
+    font-size: 16px;
+    border: 1px solid var(--color-border);
+    color: var(--color-text);
+    background-color: transparent;
+
+    &::placeholder {
+      opacity: 0;
+    }
+
+    &:focus {
+      transition: 0.5s;
+      border-color: var(--color-primary);
+
+      + label {
+        transform: translateY(calc(-50% - 0.75rem)) scale(.8);
+        color: var(--color-primary);
+        background-color: #000;
+      }
+    }
+
+    &__input:not(:placeholder-shown) + label {
+      transform: translateY(calc(-50% - 0.75rem)) scale(.8);
+      background-color: #000;
+      color: var(--color-primary);
+    }
+  }
+
+  &__label {
+    transition: 0.5s;
+    position: absolute;
+    left: 0.75rem;
+    top: 0.75rem;
+    font-size: 16px;
+    pointer-events: none;
+  }
+}
